# csend

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  CODE_REVIEW_CLASSIC_MAC_NETWORKING.md  Dockerfile  Doxyfile  LOGGING.md  MACHINE_MODE.md  MacTCP_Broadcast_Fix_Plan.md  Makefile  Makefile.classicmac  Makefile.retro68  Makefile.retro68.mactcp  Makefile.retro68.mactcp.se  Makefile.retro68.ot  OPENTRANSPORT_TCP_FIXES.md  README.md  SECURITY.md  TAGS.md  agentnotes.txt  bugs.md  chatbot_config.json  classic_file_convert  classic_mac_code_review.md  client.c  codemerge.sh  combined_code.txt  complexity_check.sh  concatenated_output.txt  convert_to_mac.sh  cpd_check.sh  csend_chatbot.py  csend_client.py  csend_mac.txt  csend_posix.txt  deadcode_check.sh  discovery.c  discovery.h  docker-compose.yml  (+28 more)
.claude/mcp-servers/classic-mac-hardware/: machines.json  server.py
.finf/: MPW_resources  agentnotes.txt  build  classic_mac  images  misc  shared  tools
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
MPW_resources/: csend.r
MPW_resources/.finf/: classic_file_convert  csend.r  csend.rsrc
MPW_resources/.rsrc/: classic_file_convert  csend.rsrc
classic_mac/: DNR.c  csend.r  dialog.c  dialog.h  dialog_input.c  dialog_input.h  dialog_messages.c  dialog_messages.h  dialog_peerlist.c  dialog_peerlist.h  discovery.c  discovery.h  logging.c  logging.h  mactcp_discovery.c  mactcp_discovery.h  mactcp_impl.c  mactcp_impl.h  mactcp_messaging.c  mactcp_messaging.h  mactcp_network.c  mactcp_network.h  main.c  messaging.c  messaging.h  network.c  network.h  network_abstraction.c  network_abstraction.h  network_init.c  network_init.h  opentransport_impl.c  opentransport_impl.h  peer.c  peer.h  peer_mac.c  peer_mac.h  peertalk_bridge.c  peertalk_bridge.h  tcp.c  (+5 more)
classic_mac/.finf/: DNR.c  dialog.c  dialog.h  discovery.c  discovery.h  logging.c  logging.h  main.c  network.c  network.h  peer_mac.c  peer_mac.h
classic_mac_mactcp/: dialog.c  discovery.c  discovery.h  mactcp_impl.c  mactcp_impl.h  main.c  messaging.c  messaging.h  network_abstraction.c  network_init.c  network_init.h  tcp_state_handlers.c  tcp_state_handlers.h  test.c  test.h
classic_mac_ot/: dialog.c  dialog_input.c  dialog_messages.c  dialog_peerlist.c  discovery.c  discovery.h  main.c  messaging.c  messaging.h  opentransport_impl.c  opentransport_impl.h  peer.h  protocol.h  test.c  test.h
docs/: ASYNC_MESSAGING_IMPROVEMENTS.md  CODE_DEDUPLICATION_PLAN.md  LOG_ANALYSIS_2025-10-11.md  MACHINE_MODE.md  MACTCP_ARCHITECTURE_ANALYSIS.md  MACTCP_CODE_REVIEW.md  MACTCP_LISTEN_POOL_PLAN.md  MACTCP_RESET_DELAY_ELIMINATION_PLAN.md  PERFORM_TEST_IMPLEMENTATION_PLAN.md  POSIX_CLASSIC_MAC_SHARING_PLAN.md  resedit.md
posix/: commands.c  commands.h  discovery.c  discovery.h  logging.c  logging.h  main.c  messaging.c  messaging.h  network.c  network.h  peer.c  peer.h  peertalk_bridge.c  peertalk_bridge.h  signal_handler.c  signal_handler.h  test.c  test.h  ui_factory.c  ui_factory.h  ui_interface.h  ui_terminal.c  ui_terminal.h  ui_terminal_commands.c  ui_terminal_commands.h  ui_terminal_interactive.c  ui_terminal_machine.c
scripts/: FILTER_LOGS_EXAMPLES.md  complexity_check.sh  cpd_check.sh  deadcode_check.sh  docker.sh  filter_logs.sh  make.sh  run_machine_mode.sh  setup_retro68.sh
shared/: common_defs.h  discovery.c  discovery.h  discovery_logic.c  discovery_logic.h  logging.c  logging.h  logging_shared.c  logging_shared.h  messaging.c  messaging.h  messaging_logic.c  messaging_logic.h  peer.c  peer.h  peer_shared.c  peer_shared.h  peer_wrapper.c  peer_wrapper.h  platform_sync.h  protocol.c  protocol.h  test.c  test.h  time_utils.c  time_utils.h  utils.h
shared/classic_mac/: logging_mac.c  peer_mac.c  peer_mac.h
shared/classic_mac/ui/: dialog_input.c  dialog_input.h  dialog_messages.c  dialog_messages.h  dialog_peerlist.c  dialog_peerlist.h
specs/003-cppcheck-improvements/: plan.md  spec.md  tasks.md
specs/003-cppcheck-improvements/checklists/: requirements.md
tools/: LOG_ANALYSIS_SUMMARY.md  MCP_SETUP.md  README.md  autorun.sh  csend_chatbot.py  csend_docs_mcp.py  csend_log_mcp.py  csend_log_mcp_config.json  test_machine_mode.py  test_mcp.sh
